# sql-sidekick

./: .appignore  .env.toml  .gitignore  Makefile  README.md  about.md  app.toml  pyproject.toml  requirements.txt  start.py
.github/ISSUE_TEMPLATE/: documentation_issue.md
.github/workflows/: deploy-to-github-pages.yml
configs/: db_config.json
documentation/: .gitignore  package-lock.json  package.json  sidebars.js
documentation/docs/: index.md  third-party-licenses.md
documentation/docs/get-started/: use-cases.md  videos.md  what-is-application-name.md
documentation/docs/python-client-guide/: page-1.md
eval/: README.md  inference.py
examples/: sdk_example.ipynb
examples/notebooks/: Guardrails_SQL_injection.ipynb  databricks_db.ipynb  sdk_example.ipynb  sdk_quick_tutorial.ipynb
examples/sleep_eda/: Sleep_health_and_lifestyle_dataset.csv  schema_generator.ipynb  table_info.jsonl  table_info_test.jsonl
examples/telemetry/: samples.csv  table_info.jsonl
examples/test/: sample_schema.jsonl
sidekick/: db_config.py  db_utils.py  logger.py  memory.py  prompter.py  query.py  schema_generator.py  utils.py
sidekick/configs/: .env.toml  data_template.py  db_config.json  env.toml  prompt_template.py
sidekick/eval/: inference.py
sidekick/examples/: sample_data.py  samples.py
tests/: .env.example  test_databricks.py  test_db_setup.py  test_guardrails.py  test_llms.py  test_remote_models.py  test_self_correction.py
ui/: app.py  app.toml  ui_config.toml
